--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Test Git</title>
 </head>
 <body>
-    <h1>Hey git mo</h1>
+    <h1>Hey</h1>
     <script src="app.js"></script>
 </body>
 </html>
